# vqa-model-builder

./: .gitignore  .poetry_requirements.txt  LICENSE  QUICK_REFERENCE.sh  README.md  pyproject.toml  setup_vivqa_pipeline.sh
configs/: ablation_config.yaml  checkpoint_configs.yaml  data_configs.yaml  generative_configs.yaml  inference_configs.yaml  logging_configs.yaml  model_configs.yaml  pipeline_config.yaml  resource_configs.yaml  training_configs.yaml  vivqa_data_configs.yaml  vivqa_evaluation_configs.yaml  warning_configs.yaml
docs/: CONFIG_SYNC_REPORT.md  PYTORCH26_COMPATIBILITY.md  README.md  SETUP_GUIDE.md  SETUP_SCRIPT_README.md  VIVQA_IMPLEMENTATION.md  VIVQA_QUICK_REFERENCE.md  api_reference.md  architecture_diagram.tex  architecture_diagram_body.tex  architecture_figure.tex  check_checkpoint_config.py  configuration_guide.md  experiments.tex  fusion_approaches.md  generative_vqa.md  getting_started.md  image_representation_approaches.md  knowledge_base_approaches.md  methodology.tex  methodology_compact.tex  methodology_short.tex  moe_approaches.md  pipeline_usage.md  prepare_data.md  text_representation_approaches.md  vivqa_usage_guide.md  vqa_architecture.md
examples/: complete_vqa_pipeline.py  fusion_examples.py  image_representation_examples.py  knowledge_base_examples.py  moe_examples.py  resource_management_examples.py  text_representation_examples.py  vivqa_examples.py
logs/resource_reports/: combined_20251221_171928.json  combined_20260109_224706.json  emergency_20251221_171933.json  emergency_20260109_224711.json  training_progress_20251221_171951.json  (+1 more)
outputs/: pipeline_summary.json
outputs/ablation/: progress.json  (+6 more)
tests/: print_configs.py
utils/: config_loader.py  logging_setup.py  path_management.py
(+250 files in other folders)
